# gcs

./: .gitignore  .gitmodules  .golangci.yml  .lintstagedrc.json  .prettierignore  .prettierrc.json  .travis.yml  BUILD.bazel  Dockerfile  Makefile  README.md  compile-protos.sh  compmission.json  distance.go  distance_test.go  docker-compose.yml  glide.yaml  go.mod  go.sum  grpc_utils.go  hub.go  longpoll.go  main.go  main.go.bak  mavlink.go  mission_edit.go  mission_edit_api.go  mission_reporting.go  mission_reporting_test.go  package-lock.json  package.json  shell.nix  udp.go  udp.go.bak  websocket.go
.flox/: .gitignore  env.json
.flox/env/: manifest.toml
.flox/log/: executive.29112.log.2026-03-27  executive.29112.log.2026-03-29  executive.29112.log.2026-03-30
.github/workflows/: docker.yml  linter.yml  main.yml  test.yml
certs/: Makefile  certs.go  server.crt  server.key
deployments/: broach-docker-compose.yml  cli_network.txt  compose_network.txt  docker-compose-mac.yml  docker-compose-sitl.yml  docker-compose.yml  maybework-broach-compose.yml  sitl-docker-compose.yml  test-broach-compose.yml
deployments/grafana/: dashboard.yaml  datasource.yaml
deployments/grafana/dashboards/: Test Dashboard-1619975545765.json  test-flight-dashboard.json
heim/: services.proto
houston/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  test.js
houston/.husky/: pre-commit
houston/public/: index.html  manifest.json
houston/src/: App.css  App.js  App.tsx  index.css  index.js  subtraction.js  subtraction.test.js
hub_def/: BUILD.bazel  hub.go
internal/: README.md
internal/airdrop/: airdrop_datatypes.go
internal/clustering/: clustering_test.go  clustermanger.go
internal/computer_vision/: computer_vision.go
internal/cvs/: client.go  datatypes.go
internal/grpc_utils/: grpc_utils.go
internal/hub_def/: BUILD.bazel  hub.go
internal/influxdb/: client.go  client_test.go
internal/interop/: BUILD.bazel  client.go  client_test.go  distance.go.bak  distance_test.go.bak  interopClient.go  interop_client.go  interop_error.go  mission.pb.go  mission_edit.pb.go  mission_report.pb.go  report.go  report.go.bak  report_test.go  report_test.go.bak  service.go  service.pb.go  service.pb.gw.go  telemetry.pb.go
internal/interopconn/: client.go  client_test.go  conn.go  interop.go  interop_api.pb.go  interop_error.go  report_test.go  service.go
internal/manager/: datatypes.go  manager.go
internal/mavlink/: antenna_tracker.go  client.go  endpoint.go  eventframe_handlers.go  mavlink.go  plane.go  router_node_handler.go  telemetry.go
internal/mission_edit/: mission_edit.go  mission_edit_api.go
internal/obc/: client.go  client_test.go
internal/path_plan/: 2020-test-mission.json  BUILD.bazel  path.go  path_client_test.go  path_edit.go  path_edit_api.go  rtpp_client.go  rtpp_error.go
internal/pathplanning/: rtpp_client.go
internal/server/: datatypes.go  path.go  server.go  server_test.go  tcp.go
internal/sim/: sim.go
internal/udp/: udp.go
internal/utils/: http_client.go  http_client_test.go  http_error.go  influx_client.go  utils.go
internal/websocket/: websocket.go  websocket.go.bak
interop/: BUILD.bazel  mission.pb.go  mission.proto  mission_edit.pb.go  mission_edit.proto  mission_report.pb.go  mission_report.proto  obstacles.pb.go  path.pb.go  service.pb.go  service.pb.gw.go  service.proto  service.swagger.json  telemetry.pb.go  telemetry.proto
interopconn/: BUILD.bazel  BUILD.bazel.bak  conn.go  distance.go  distance_test.go  interop.go  report.go  report_test.go  service.go
mission_edit/: BUILD.bazel  BUILD.bazel.bak  mission_edit.go  mission_edit_api.go
missions/: blackmtn1.json  blackmtn2.json  blackmtn3.json  blackmtn4.json  blackmtn5.json  compmission.json  riverside1.json  riverside2.json  riverside3.json  riverside7.json
obc/: status.proto
old_format/Everest/: mission.json
old_format/MichaelsMission/: mission.json
old_format/comp_mission/: mission.json  targets.json
old_format/marco_safe_mission/: obstacles.json  sitl.json
old_format/riverside/: mission.json  obstacles.json
old_format/riverside_4_9_2017_2/: obstacles.json
old_format/riverside_easy/: mission.json  obstacles.json
old_format/riverside_full_miss_1/: obstacles.json  targets.json
old_format/riverside_full_miss_2/: mission.json  targets.json
old_format/riverside_harder/: mission.json
old_format/riverside_otto_1/: obstacles.json
path_plan/: BUILD.bazel  path_edit.go  path_edit_api.go
pathplanner/: path.proto
protos/heim/: all.proto
protos/interop/: mission.proto  mission_edit.proto  mission_report.proto  obstacles.proto  service.proto  telemetry.proto
scripts/: broach-docker-compose.sh  develop-flox.sh  docker-compose-replacement.sh  docker-compose.sh  docker-ip-forward.sh  format.sh  install-go.sh  install-linter-linux.sh  install-protoc.sh  logs.sh  pull-large-assets.sh  restart.sh  run-flox.sh  run-sim.sh  setup-influxdb.sh  status.sh  stop-flox.sh
scripts/flox-services/: gcs.sh  grafana.sh  influxdb.sh  mavproxy.sh
static/: 404.html  README.md  index.html
static/css/: bottle.css  connection.css  game.css  global.css  image-gallery.css  jetson-debug.css  mission-control.css  mission-input.css  mission-report.css  navbar.css  odlc-view.css  value-gauge.css
static/html/: connection.html  game.html  jetson-debug.html  mission-control.html  mission-input.html  mission-report.html
static/js/: connection.js  extendo-form.js  gallery.js  game.js  grow-box.js  image-gallery.js  jetson-debug.js  location-worker.js  mission-control.js  mission-input.js  mission-report.js  navbar.js  tuas-map.js  util.js  value-gauge.js
static/music/: final.webm  intense.webm  normal.webm  scary.webm  title.webm  valiant.webm
(+85 files in other folders)
