load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "conn.go",
        "distance.go",
        "interop.go",
        "report.go",
        "service.go",
    ],
    importpath = "github.com/tritonuas/god/hub/interopconn",
    visibility = ["//visibility:public"],
    deps = [
        "//hub/hub_def:go_default_library",
        "//hub/interop:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "distance_test.go",
        "report_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//hub/interop:go_default_library"],
)
