load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "path_edit.go",
        "path_edit_api.go",
    ],
    importpath = "github.com/tritonuas/hub/path_plan",
    visibility = ["//visibility:public"],
    deps = [
        "//hub/interop:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
